'bug' messages should be changed to Warning severity

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-02-08
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      These two messages should have severity higher than Informational:

      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-            if (nextNotIncreasing) {
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                // Our new key is less than the old key which means the next call moved to !next.
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                LOGV2(51790,
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                      "WTIndex::updatePosition -- the new key ({newKey}) is less than the previous "
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp:                      "key ({prevKey}), which is a bug.",
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                      "WTIndex::updatePosition -- new key is less than previous key",
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                      "newKey"_attr = redact(toHex(item.data, item.size)),
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-                      "prevKey"_attr = redact(_key.toString()));
      src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp-
      --
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-    if (_forward && _lastReturnedId >= id) {
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-        LOGV2(22406,
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-              "WTCursor::next -- c->next_key ( {next}) was not greater than _lastReturnedId "
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:              "({last}) which is a bug.",
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:              "WTCursor::next -- next was not greater than last which is a bug",
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-              "next"_attr = id,
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-              "last"_attr = _lastReturnedId);
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-
      src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp-        // Crash when testing diagnostics are enabled.
      

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: