SERVER-50887 'bug' messages should be changed to a warning severity