src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp
@@ -1077,12 +1077,13 @@ protected:
 
             if (nextNotIncreasing) {
                 // Our new key is less than the old key which means the next call moved to !next.
-                LOGV2(51790,
-                      "WTIndex::updatePosition -- the new key ({newKey}) is less than the previous "
-                      "key ({prevKey}), which is a bug.",
-                      "WTIndex::updatePosition -- new key is less than previous key",
-                      "newKey"_attr = redact(hexblob::encode(item.data, item.size)),
-                      "prevKey"_attr = redact(_key.toString()));
+                LOGV2_ERROR(
+                    51790,
+                    "WTIndex::updatePosition -- the new key ({newKey}) is less than the previous "
+                    "key ({prevKey}), which is a bug.",
+                    "WTIndex::updatePosition -- new key is less than previous key",
+                    "newKey"_attr = redact(hexblob::encode(item.data, item.size)),
+                    "prevKey"_attr = redact(_key.toString()));
 
                 // Crash when testing diagnostics are enabled.
                 invariant(!TestingProctor::instance().isEnabled());
